Выполнил 2 этап: Список проектов Просмотр проекта Редактирование проекта Удаление проекта Создание задачи в выбранном проекте

--- a/webapp/templates/Project/create.html
+++ b/webapp/templates/Project/create.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <center>
-        <h1 style="margin-top: 50px; margin-bottom: 50px">Create Your New Task</h1>
+        <h1 style="margin-top: 50px; margin-bottom: 50px">Create Your New Project</h1>
     </center>
     <form method="post" action="{% url 'create' %}">
         {% include 'partial/universal_form.html' with value_submit='Create' %}
