--- a/webapp/templates/Project/update.html
+++ b/webapp/templates/Project/update.html
@@ -11,9 +11,9 @@
 {% block content %}
 
     <center>
-        <h1 style="margin-top: 50px; margin-bottom: 50px">Update your Task</h1>
+        <h1 style="margin-top: 50px; margin-bottom: 50px">Update your Project</h1>
     </center>
     <form method="post">
-        {% include 'partial/universal_form.html' with value_submit='Change' %}
+        {% include 'partial/universal_form.html' with value_submit='Update' %}
     </form>
 {% endblock %}
