Поменял app_name на webapp, так же сделал app_name для accounts, зарегал в настройках приложение аккаунты. Создал шаблон логинки

--- a/webapp/templates/Project/create.html
+++ b/webapp/templates/Project/create.html
@@ -10,7 +10,7 @@
     <center>
         <h1 style="margin-top: 50px; margin-bottom: 50px">Create Your New Project</h1>
     </center>
-    <form method="post" action="{% url 'create' %}">
+    <form method="post" action="{% url 'webapp:create' %}">
         {% include 'partial/universal_form.html' with value_submit='Create' %}
     </form>
 {% endblock %}
