--- a/webapp/templates/Project/update.html
+++ b/webapp/templates/Project/update.html
@@ -2,7 +2,7 @@
 
 {% block navbar %}
     <span style="margin-top: 8px; color: white">|</span>
-    <a class="nav-link active" aria-current="page" href="{% url 'create' %}">Create Task</a>
+    <a class="nav-link active" aria-current="page" href="{% url 'webapp:create' %}">Create Task</a>
     <span style="margin-top: 8px; color: white">|</span>
 {% endblock %}
 
