--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">Projects Page</a>
+        <a class="navbar-brand" href="{% url 'webapp:home' %}">Projects Page</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
