--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,29 +1,32 @@
 {% extends 'base.html' %}
 
 {% block navbar %}
-    <span style="color: white; margin-top: 5px; margin-right: 16px">|</span>
-    <a class="nav-link active" aria-current="page" href="{% url 'webapp:webapp:home' %}">Projects Page</a>
-    <span style="color: white; margin-top: 5px; margin-right: 16px">|</span>
+    <a class="nav-link active" aria-current="page" href="{% url 'webapp:home' %}">Projects Page</a>
+    <span style="margin-top: 8px; color: white">|</span>
 {% endblock %}
 
 <title>{% block title %}Sign In{% endblock %}</title>
 
 {% block content %}
-    <h1 style="text-align: center; margin-top: 50px">Sign In:</h1>
+    <h1 style="text-align: center; margin-top: 50px; margin-bottom: 30px">Sign In:</h1>
     <form action="" method="post" class="text-center">
         {% csrf_token %}
-        {% if has_error %}
-            <p class="form-error">Wrong UserName or Password</p>
-        {% endif %}
         <div class="mb-3">
             <label for="username" class="form-label">User name:</label>
             <input type="text" class="form-control mx-auto" name="username" id="username"
-                   style="max-width: 300px; border: solid 2px">
+                   style="max-width: 300px; border: solid 2px; border-radius: 20px;" placeholder="User name">
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Password:</label>
             <input type="password" class="form-control mx-auto" name="password" id="password"
-                   style="max-width: 300px; border: solid 2px">
+                   style="max-width: 300px; border: solid 2px; border-radius: 20px;" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-outline-success"><b>Войти</b></button>
+    
+        {% if has_error %}
+            <p class="form-error">Wrong UserName or Password</p>
+        {% endif %}
+    
+        <button type="submit" class="btn btn-outline-dark"
+                style="border: 2px solid; margin-top: 30px; border-radius: 15px"><b>Sign In</b></button>
+    </form>
 {% endblock %}
