--- a/webapp/templates/Project/home.html
+++ b/webapp/templates/Project/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block navbar %}
-    <a class="nav-link active" aria-current="page" href="{% url 'webapp:create' %}">Create Project</a>
-    <span style="margin-top: 8px; color: white">|</span>
+    {% if request.user.is_authenticated %}
+        <a class="nav-link active" aria-current="page" href="{% url 'webapp:create' %}">Create Project</a>
+        <span style="margin-top: 8px; color: white">|</span>
+    {% endif %}
 {% endblock %}
 
 <title>{% block title %}Projects{% endblock %}</title>
@@ -14,7 +16,11 @@
     </div>
 
     <center>
-        <h1 style="margin-top: 50px">Your Projects:</h1>
+        {% if request.user.is_authenticated %}
+            <h1 style="margin-top: 50px">Your Projects:</h1>
+        {% else %}
+            <h1 style="color: red; padding-top: 50px"><b>You Must Log In</b></h1>
+        {% endif %}
     </center>
     <div class="row row-cols-3">
         {% for p in projects %}
@@ -24,9 +30,15 @@
                     <div class="card-body">
                         <h4 class="card-title" style="margin-bottom: 20px">{{ p.name }}</h4>
                         <hr>
-                        <h6 class="card-text" style="font-size: 14px; margin-bottom: 20px">{{ p.description }}</h6>
-                        <a href="{% url 'webapp:detail' p.pk %}" class="btn btn-success">See more</a>
-                        <a href="{% url 'webapp:edit' p.pk %}" class="btn btn-dark" style="margin-left: 40px;">Edit Project</a>
+                        <h6 class="card-text" style="font-size: 14px; margin-bottom: 20px">
+                            Description: {{ p.description }}</h6>
+                        {% if request.user.is_authenticated %}
+                            <a href="{% url 'webapp:detail' p.pk %}" class="btn btn-success">See more</a>
+                            <a href="{% url 'webapp:edit' p.pk %}" class="btn btn-dark" style="margin-left: 40px;">Edit
+                                Project</a>
+                        {% else %}
+                            <h5 style="color: red; padding-top: 20px"><b>You Must Log In</b></h5>
+                        {% endif %}
                     </div>
                 </div>
             </div>
