--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -18,6 +18,18 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 {% block navbar %}{% endblock %}
+                {% if not request.user.is_authenticated %}
+                    <a class="nav-link active" aria-current="page" href="{% url 'accounts:login' %}">Sign In</a>
+                {% else %}
+                    <a class="nav-link active" aria-current="page" style="color: blue"><b style="color: white">User:</b> {{ request.user }}</a>
+                    <form method="post" action="{% url 'accounts:logout' %}">
+                        {% csrf_token %}
+                        <button type="sumbit"
+                                style="border: none; outline: none; margin-top: 8px; background: transparent">Sign Out
+                        </button>
+                        <span style="color: white; margin-top: 5px; margin-right: 16px">|</span>
+                    </form>
+                {% endif %}
             </div>
         </div>
     </div>
