--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -19,6 +19,8 @@
             <div class="navbar-nav ms-auto">
                 {% block navbar %}{% endblock %}
                 {% if not request.user.is_authenticated %}
+                    <a class="nav-link active" aria-current="page" href="{% url 'accounts:register' %}">Sign Up</a>
+                    <span style="margin-top: 8px; color: white">|</span>
                     <a class="nav-link active" aria-current="page" href="{% url 'accounts:login' %}">Sign In</a>
                 {% else %}
                     <a class="nav-link active" aria-current="page" style="color: blue"><b style="color: white">User:</b> {{ request.user }}</a>
