--- a/webapp/templates/Project/home.html
+++ b/webapp/templates/Project/home.html
@@ -2,8 +2,10 @@
 
 {% block navbar %}
     {% if request.user.is_authenticated %}
-        <a class="nav-link active" aria-current="page" href="{% url 'webapp:create' %}">Create Project</a>
-        <span style="margin-top: 8px; color: white">|</span>
+        {% if perms.webapp.add_project %}
+            <a class="nav-link active" aria-current="page" href="{% url 'webapp:create' %}">Create Project</a>
+            <span style="margin-top: 8px; color: white">|</span>
+        {% endif %}
     {% endif %}
 {% endblock %}
 
@@ -34,12 +36,22 @@
                             Description: {{ p.description }}</h6>
                         {% if request.user.is_authenticated %}
                             <a href="{% url 'webapp:detail' p.pk %}" class="btn btn-success">See more</a>
+                            {% if perms.webapp.change_project and request.user in p.users.all %}
                             <a href="{% url 'webapp:edit' p.pk %}" class="btn btn-dark" style="margin-left: 40px;">Edit
                                 Project</a>
+                            {% endif %}
                         {% else %}
                             <h5 style="color: red; padding-top: 20px"><b>You Must Log In</b></h5>
                         {% endif %}
                     </div>
+                <span style="color: black; padding-left: 10px">
+                    <b>Пользователь:</b>
+                    {% for user in p.users.all %}
+                        {{ user.username }}
+                        {% if not forloop.last %},
+                        {% endif %}
+                    {% endfor %}
+                </span>
                 </div>
             </div>
         {% empty %}
